implemented custom hash on gpu chunks. switched the map to storing shared_ptrs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,15 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(tracy)
 
+FetchContent_Declare(
+    unordered_dense
+    GIT_REPOSITORY https://github.com/martinus/unordered_dense.git
+    GIT_TAG v4.5.0
+    GIT_SHALLOW TRUE
+    GIT_PROGRESS TRUE
+)
+FetchContent_MakeAvailable(unordered_dense)
+
 add_custom_target(shaders
         # COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/resources
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/resources ${CMAKE_BINARY_DIR}/$<CONFIG>/${CMAKE_BUILD_TYPE}/resources
@@ -89,7 +98,7 @@ set(SOURCES
 
 add_executable(voxel_terrain ${SOURCES})
 add_dependencies(voxel_terrain shaders)
-target_link_libraries(voxel_terrain PRIVATE glad glfw glm jsoncpp_object TracyClient)
+target_link_libraries(voxel_terrain PRIVATE glad glfw glm jsoncpp_object TracyClient unordered_dense)
 target_include_directories(voxel_terrain PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_include_directories(voxel_terrain PRIVATE ${fastnoiselite_SOURCE_DIR}/Cpp)
 
