--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if(NOT glad_POPULATED)
     FetchContent_MakeAvailable(glad)
 
     add_subdirectory("${glad_SOURCE_DIR}/cmake" glad_cmake)
-    glad_add_library(glad REPRODUCIBLE EXCLUDE_FROM_ALL LOADER API gl:core=4.6 EXTENSIONS GL_NV_mesh_shader GL_KHR_shader_subgroup)
+    glad_add_library(glad REPRODUCIBLE EXCLUDE_FROM_ALL LOADER API gl:core=4.6 EXTENSIONS GL_ARB_sparse_buffer GL_NV_mesh_shader GL_KHR_shader_subgroup)
 endif()
 
 FetchContent_Declare(
